Bug 90480 - Corrupted Profile Leads to No Visible Colors (a11y feature to use system text color for document text)
Summary: Corrupted Profile Leads to No Visible Colors (a11y feature to use system text...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: All All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-04-06 15:42 UTC by Joel Madero
Modified: 2016-10-25 18:54 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Broken Profile Folder (1.13 MB, application/x-bzip)
2015-04-06 15:42 UTC, Joel Madero
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joel Madero 2015-04-06 15:42:44 UTC
Created attachment 114650 [details]
Broken Profile Folder

Steps to Reproduce:

1. Download and unzip attached file;
2. Replace your current LibreOffice config folder with the attached folder;
3. Open writer;
4. Write a sentence;
5. Change the color

Observed: Color not seen to change (although it actually has changed);

Expected: Color visibly changes on screen.

No idea what triggered this, I upgraded to 4.4.2.1 through ppa and faced this issue. Fresh profile fixes it but not sure how many others may face this issue.
Comment 1 Joel Madero 2015-04-06 15:43:17 UTC
Ubuntu 14.10 x 64
LibreOffice 4.4.2.1
Comment 2 raal 2015-04-13 19:04:23 UTC
I can not confirm with Version: 4.4.3.0.0+
Build ID: b8fdf370d8732d39d6739e320aa1450ead5a31b7
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-4-4, Time: 2015-03-31_08:26:49

Do you mean change of color of font?
Comment 3 Joel Madero 2015-04-13 21:48:13 UTC
You have to download my profile and replace your libreoffice config folder. Literally no colors appear at all on screen with the corrupted profile.
Comment 4 Joel Madero 2015-04-22 20:36:33 UTC
Not sure how but I corrupted the profile again today and had the exact same issue. Had a crash in ubuntu after changing a theme, when I started LibreOffice back up, all colors were not visible. Deleting profile fixed it again.
Comment 5 Joel Madero 2015-04-25 21:50:11 UTC
*** Bug 90705 has been marked as a duplicate of this bug. ***
Comment 6 Joel Madero 2015-04-25 21:51:13 UTC
We have another person seeing this and it's quite serious. I am moving this to critical and adding regression but we still need independent verification before marking as NEW and IMHO adding to MAB.
Comment 7 David Mantock 2015-04-26 08:43:39 UTC
I just recreated my user profile as suggested and the problem still persists.

Observed: Drop down list does not appear so that you can even attempt to change colors using the toolbar.

Using the contextual menus it is possible to change font color.

Version: 4.4.2.2
Comment 8 Carlos Rodriguez 2015-05-24 10:07:55 UTC
I can confirm this issue on:

Versión: 4.4.2.2
Id. de compilación: c4c7d32d0d49397cad38d62472b0bc8acff48dd6
Configuración regional: es_ES

Debian 8
Comment 9 Carlos Rodriguez 2015-05-24 10:21:28 UTC
Same issue on:

Versión: 4.4.3.2
Id. de compilación: 88805f81e9fe61362df02b9941de8e38a9b5fd16
Configuración regional: es_ES

Debian 8.
Comment 10 raal 2015-05-24 10:28:01 UTC
(In reply to Carlos Rodriguez from comment #9)
> Same issue on:
> 
> Versión: 4.4.3.2
> Id. de compilación: 88805f81e9fe61362df02b9941de8e38a9b5fd16
> Configuración regional: es_ES
> 
> Debian 8.

Setting to new
Comment 11 Caolán McNamara 2016-06-14 20:10:37 UTC
See tools->options->accessibility: "Use automatic font color for screen displays" is active. That's why the color doesn't have an effect. "Displays fonts in LibreOffice using the system color settings. This option only affects the screen display."
Comment 12 Commit Notification 2016-06-14 20:34:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=90018d327e9a41085585519a704f9fa07953cbf3

Related: tdf#90480 explain in the font color dialog why colors aren't used...

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Caolán McNamara 2016-06-14 20:39:32 UTC
Joel's problem is an a11y option which disables the use of font colors on-screen. So its "doing what its supposed to". I've added a info label to the font color dialog page to indicate that this option is active when its turned on, which should help people figure this out if it happens to them.

Outside of that I don't think there much else that can be done here, except to enhance the feedback that this option is ok. If there is some evidence that this is getting toggled on as a bug then we'd need some way to figure out how to reproduce that inadvertent toggling on.
Comment 14 Caolán McNamara 2016-06-14 20:40:46 UTC
comments #7 downwards mention "Drop down list does not appear" and are something else than the original report of Joel