Related: tdf#90480 explain in the font color dialog why colors aren't used...

if the a11y option "Use automatic font color for screen display" is active.

I guess we could go to town and have a button to zoom to that option or to
directly disable it, but I've never encountered this problem before so surely
it isn't that common that we need to immediately do that.

Change-Id: Id19cac56591829f5644a8ac66c3d873c77e152f8